--- a/src/app/components/todo/add/add.component.html
+++ b/src/app/components/todo/add/add.component.html
@@ -7,11 +7,12 @@
 
       <div class="row">
         <div class="col-lg-6 col-md-6 col-xs-12 col-sm-12">
-          <input autofocus type="text" placeholder="Enter todo item" class="form-control" [(ngModel)]="editItem.name" />
+          <input autofocus type="text" placeholder="Enter todo item" 
+          class="form-control" />
         </div>
         <div>
           <div class="col-lg-6 col-md-6 col-xs-12 col-sm-12 float-left">
-            <button class="btn btn-primary" (click)="updateItem()">update</button>
+            <button class="btn btn-primary" (click)="addItem()">save</button>
           </div>
           <div class="col-lg-6 col-md-6 col-xs-12 col-sm-12 float-left">
             <button class="btn btn-secondary" (click)="cancelItem()">cancel</button>
